--- a/project 4/04-animations-and-transitions/3-draw-bars-with-css-transition/styles.css
+++ b/project 4/04-animations-and-transitions/3-draw-bars-with-css-transition/styles.css
@@ -9,12 +9,13 @@
     fill: darkgrey;
     font-size: 12px;
     font-family: sans-serif;
-    transition: y 1s ease-out;
+    transition: transform 1s ease-out;
 }
 
 .mean {
     stroke: maroon;
     stroke-dasharray: 2px 4px;
+    transition: transform 1s ease-out;
 }
 
 .x-axis-label {
