--- a/project 4/05-interactions/2-bars/draft/styles.css
+++ b/project 4/05-interactions/2-bars/draft/styles.css
@@ -3,6 +3,7 @@
 }
 
 .wrapper {
+    position: relative;
 }
 
 .bin rect {
@@ -35,7 +36,7 @@ body {
 }
 
 .tooltip {
-    opacity: 0;
+    /*opacity: 0;*/
     position: absolute;
     top: -12px;
     left: 0;
