--- a/project 4/11-radar-weather-chart/draft/styles.css
+++ b/project 4/11-radar-weather-chart/draft/styles.css
@@ -30,3 +30,11 @@ body {
 
 .grid-line { stroke: #dadadd;
 }
+
+.tick-label { 
+    dominant-baseline: middle; 
+    fill: #8395a7; 
+    font-size: 0.7em; 
+    font-weight: 900; 
+    letter-spacing: 0.005em;
+}
