draw the gridlines of temperatures

--- a/project 4/11-radar-weather-chart/draft/styles.css
+++ b/project 4/11-radar-weather-chart/draft/styles.css
@@ -28,7 +28,9 @@ body {
     font-feature-settings: 'tnum' 1;
 }
 
-.grid-line { stroke: #dadadd;
+.grid-line { 
+    stroke: #dadadd;
+    fill:none;
 }
 
 .tick-label { 
