--- a/project 4/11-radar-weather-chart/draft/styles.css
+++ b/project 4/11-radar-weather-chart/draft/styles.css
@@ -40,3 +40,10 @@ body {
     font-weight: 900; 
     letter-spacing: 0.005em;
 }
+
+.tick-label-temperature { 
+    fill: #8395a7;
+    opacity: 0.7;
+    font-size: 0.7em; 
+    dominant-baseline: middle;
+}
