--- a/project 4/11-radar-weather-chart/draft/styles.css
+++ b/project 4/11-radar-weather-chart/draft/styles.css
@@ -114,3 +114,8 @@ transition: all 0.1s ease-out; }
 }
 .tooltip-uv {
 color: #feca57; }
+
+.tooltip-line {
+    fill: #8395a7;
+    fill-opacity: 0.2; mix-blend-mode: multiply; pointer-events: none;
+}
